Plug memory leakage

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 log.txt
 remotelog.txt
+memlog.txt
+client_key.h
+server_key.h
+include\client_key.h
+include\server_key.h
 
 #################
 ## Eclipse
