--- a/client/client.vcxproj.filters
+++ b/client/client.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\src\io.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\memory.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\net.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\io.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\memory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
