--- a/server/server.vcxproj.filters
+++ b/server/server.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\src\io.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\memory.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\aes.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\io.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\memory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
