--- a/keygen/keygen.vcxproj.filters
+++ b/keygen/keygen.vcxproj.filters
@@ -51,7 +51,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\memory.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
