--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -15,7 +15,9 @@
     <ClCompile Include="..\src\io.c" />
     <ClCompile Include="..\src\logger.c" />
     <ClCompile Include="..\src\main.c" />
-    <ClCompile Include="..\src\memory.c" />
+    <ClCompile Include="..\src\memory.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\src\net.c" />
     <ClCompile Include="..\src\sha256.c" />
   </ItemGroup>
